Fixed overflow

--- a/css/footer/right-panel.css
+++ b/css/footer/right-panel.css
@@ -162,3 +162,26 @@
         width: 603px;
     }
 } 
+
+@media screen and (max-width: 825px) {
+    #footer-right-container {
+        flex-direction: column;
+        top: -820px;
+    }
+
+    #footer-right-container #company {
+        max-width: 393px;
+        margin-left: 80px;
+    }
+
+    #footer-right-container #get-in-touch {
+        margin-top: 60px;
+        margin-left: 60px;
+    }
+
+    #footer-right-container {
+        box-shadow: unset;
+        -webkit-box-shadow: unset;
+        -moz-box-shadow: unset;
+    }
+}
